--- a/src/app/my-first-comp/my-first-comp.component.html
+++ b/src/app/my-first-comp/my-first-comp.component.html
@@ -1,1 +1,53 @@
-<p>my-first-comp works!</p>
+<div class="form-container">
+  <h2>Simple Form</h2>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input
+        type="text"
+        id="name"
+        [(ngModel)]="name"
+        name="name"
+        required
+      >
+        <!--(keydown)="onSubmit()"-->
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" [(ngModel)]="email" name="email" id="email" required>
+    </div>
+    <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea id="message" [(ngModel)]="message" name="message" rows="4" required></textarea>
+    </div>
+    <!--<button type="button" (click)="onSubmit()">Semplice</button>-->
+    <button type="submit">Submit</button>
+  </form>
+
+<!--  <table *ngIf="isSubmitted">-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--      <th>#</th>-->
+<!--      <th>Name</th>-->
+<!--      <th>Email</th>-->
+<!--      <th>Message</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--    <tr *ngFor="let msg of messages;let i = index">-->
+<!--      <td>{{ i + 1 }}</td>-->
+<!--      <td>{{ msg.name }}</td>-->
+<!--      <td>{{ msg.email }}</td>-->
+<!--      <td>{{ msg.message }}</td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--  </table>-->
+<!--
+  <div *ngIf="isSubmitted">
+    <h3>Form Data:</h3>
+    <p><strong>Name:</strong>{{ name }}</p>
+    <p><strong>Email:</strong>{{ email }}</p>
+    <p><strong>Mesage:</strong>{{ message }}</p>
+  </div>
+  -->
+</div>
