--- a/src/app/my-first-comp/my-first-comp.component.html
+++ b/src/app/my-first-comp/my-first-comp.component.html
@@ -50,4 +50,12 @@
     <p><strong>Mesage:</strong>{{ message }}</p>
   </div>
   -->
+  <div class="flex-container" *ngIf="isSubmitted">
+    <app-message-details
+      *ngFor="let msg of messages;let i = index"
+      [message]="msg"
+      [index]="i"
+      (delete)="deleteMessage($event)"
+    ></app-message-details>
+  </div>
 </div>
