--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>{{ title }}</h1>
-
-<app-my-first-comp></app-my-first-comp>
+<app-menu></app-menu>
+<h2>Angular Crash course</h2>
 <router-outlet></router-outlet>
